--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#"><i class="fa-sharp fa-solid fa-shopping-cart"></i></a></li>
-
             </ul>
         </div>
+    </section>
+    <section class="products">
+    <div id="items">
+        
+    </div>
     </section>
     <script src="index.js" />
 </body>
